--- a/404.html
+++ b/404.html
@@ -1,25 +1,18 @@
 ---
 permalink: /404.html
-layout: home
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
+{% include header.html %}
 
-<div class="container">
-  <h1>404</h1>
+{% include navigation.html %}
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+
+<div class="main-container bg-color-two">
+<div class="container" style="text-align: center; padding-top: 6%">
+  <h1>404 </h1>
+
+  <h2><strong>Page not found  😕</strong></h2>
 </div>
+</div>
+
+{% include footer.html %}
