--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 layout: home
-title: Bishal Thapa | Senior Software Developer
+title: Bishal Thapa - Senior Software Developer
+description: Bishal Thapa is a Senior Software Developer with a broad range of interests in the tech world, primarily focused on software engineering.
+image:
+  path: /assets/images/about/bishal_thapa.png
 ---
 
 
