--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Bishal Thapa - Senior Software Developer
   <div class="header">
     <h1 class=""> Bishal Thapa</h1>
     <a href="mailto:dev.bith@gmail.com">dev.bith@gmail.com</a> |
-    <a href="https://www.linkedin.com/in/thebishalthapa/">Linkedin</a>
+    <a href="https://www.linkedin.com/in/thebishalthapa/">LinkedIn</a>
   </div>
   <br> <br><br>
   <h3>About </h3>
